# SQLAlchemy-Nested-Mutable

./: .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: release.yml
.github/workflows/: ci.yml  release.yml
sqlalchemy_nested_mutable/: mutable.py  trackable.py
src/sqlalchemy_nested_mutable/: _typing.py
src/sqlalchemyv2_nested_mutable/: CHANGELOG.md  __init__.py  mutable.py  trackable.py
src/tests/: config.py  conftest.py  utils.py
src/tests/integration/: test_custom_sqltype.py  test_mutable_dict.py  test_mutable_list.py  test_mutable_pydantic_type.py  test_sa_default_behaviour.py
tests/: config.py  conftest.py  utils.py
tests/integration/: test_custom_sqltype.py  test_mutable_pydantic_type.py
